--- a/build.gradle
+++ b/build.gradle
@@ -55,5 +55,9 @@ dependencies {
     compile group: 'junit', name: 'junit', version:'4.12'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.7'
+        compile group:  'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
+    compile group:  'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'
+    compile group:  'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    compile group:  'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.0'
     compile group: 'math-lib', name: 'mathlib-gradle', version: '1.0'
 }
