--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@
  * For more details take a look at the Java Libraries chapter in the Gradle
  * user guide available at https://docs.gradle.org/3.5/userguide/java_library_plugin.html
  */
+ plugins {
+  id "org.sonarqube" version "2.6"
+}
 
 apply plugin: 'java-library'
 apply plugin: 'java'
@@ -48,9 +51,6 @@ dependencies {
     
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    
-	// https://mvnrepository.com/artifact/org.mongodb.morphia/morphia
-    compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.2'
     
     compile group: 'junit', name: 'junit', version:'4.12'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.7'
