--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
+    compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.2'
     compile group: 'junit', name: 'junit', version:'4.12'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.7'
