Build changes for Java 9, Jenkins

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@
 }
 
 apply plugin: 'java-library'
+apply plugin: 'java-library-distribution'
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
 
 sourceCompatibility = 1.9
 targetCompatibility = 1.9
