--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,14 @@ version = '0.0.1-SNAPSHOT'
 description = "Text Processing Framework"
 
 repositories {
-     maven { url "http://repo.maven.apache.org/maven2" }
-     mavenLocal()
-     flatDir {
+    // Use jcenter for resolving your dependencies.
+    // You can declare any Maven/Ivy/file repository here.
+    jcenter()
+    maven {
+        url "http://central.maven.org/maven2/"
+    }
+	mavenLocal()
+	flatDir {
         name "jarRepository"
         dirs "lib"
     }
