--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -13,5 +13,5 @@ POS_FILE=3eslpos.txt
 ## EXTENDED_VOCAB_FILE=5deskpos.txt
 FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
-## SLANG_FILE=slangWordsposExtended.txt
+SLANG_FILE=slangWordsposExtended.txt
 USER_FILE=feedWordspos.txt
