--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,12 +6,12 @@
 ## Parts of Speech (POS) config
 ##
 # all files relative to POS_DIR
-POS_DIR=C:/projects/Git/text-processing/build/resources/main/reference/pos/
+POS_DIR=/reference/pos/
 POS_FILE=3eslpos.txt
 ## any of the blow params can be omitted (commented out). 
 ## If so they are simply not loaded
 ## EXTENDED_VOCAB_FILE=5deskpos.txt
 FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
-SLANG_FILE=slangWordsposExtended.txt
+SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
