--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,3 +15,4 @@ FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
+WORDS_TO_IGNORE=a,an,the,but,>,(,),to
