--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,6 +15,8 @@ FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
-WORDS_TO_IGNORE=a,an,and,but,for,has,if,in,is,of,on,the,to,0,1,2,3,>,(,),_,{,},*,\\,',",/,-,#
+WORDS_TO_IGNORE=a,an,and,as,but,for,has,if,in,is,of,on,the,to,0,1,2,3,>,(,),_,{,},*,\\,',",/,-,#
 filterWordsToIgnore=true
 filterPunctuation=true
+substituteWordVariants=true
+VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
