Added formatting of source data.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,3 +20,4 @@ filterWordsToIgnore=true
 filterPunctuation=true
 substituteWordVariants=true
 VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
+dataFormatterClass=org.dwbzen.text.util.TicketDataFormatter
