--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@
  */
  plugins {
   id "org.sonarqube" version "2.6"
+  id "java"
 }
 
 apply plugin: 'java-library'
 apply plugin: 'java-library-distribution'
-apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'jacoco'
@@ -70,17 +70,12 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
-    // https://mvnrepository.com/artifact/junit/junit
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    
-    compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.2'
-    compile group: 'junit', name: 'junit', version:'4.12'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.7'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.7'
-    compile group:  'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
-    compile group:  'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.5'
-    compile group:  'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
-    compile group:  'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.5'
-    compile group: 'math-lib', name: 'mathlib-gradle', version: '2.0'
-    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
+    implementation  'org.apache.logging.log4j:log4j-api:2.8'
+    implementation  'org.apache.logging.log4j:log4j-core:2.8'
+	implementation  'math-lib:mathlib-gradle:2.0'
+    implementation  'com.fasterxml.jackson.core:jackson-core:2.9.5'
+    implementation  'com.fasterxml.jackson.core:jackson-annotations:2.9.5'
+    implementation  'com.fasterxml.jackson.core:jackson-databind:2.9.5'
+    implementation  'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.5'
+    implementation  'javax.ws.rs:javax.ws.rs-api:2.1'
 }
