Add Json input formatter for Twitter feeds

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -22,4 +22,7 @@ substituteWordVariants=true
 ignoreNumbers=true
 VARIANTS_MAP_FILENAME=build/resources/main/reference/12Dicts/2+2lemma_map.txt
 VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
-dataFormatterClass=org.dwbzen.text.util.TicketDataFormatter
+## specifies the IDataFormatter implementation class for a given schema
+dataFormatterClass.ticket=org.dwbzen.text.util.TicketDataFormatter
+dataFormatterClass.jsonTwitter=org.dwbzen.text.util.JsonTwitterDataFormatter
+dataFormatterClass.text=org.dwbzen.text.util.TextFileDataSource
