--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -25,4 +25,4 @@ VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
 ## specifies the IDataFormatter implementation class for a given schema
 dataFormatterClass.ticket=org.dwbzen.text.util.TicketDataFormatter
 dataFormatterClass.jsonTwitter=org.dwbzen.text.util.JsonTwitterDataFormatter
-dataFormatterClass.text=org.dwbzen.text.util.TextFileDataSource
+dataFormatterClass.text=none
