--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,13 +15,17 @@ FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
-WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9,>,(,),_,{,},*,\\,',",/,-,#
+WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9,>,(,),_,{,},*,\\,',",/,-,#,;
 filterWordsToIgnore=true
 filterPunctuation=true
 substituteWordVariants=true
 ignoreNumbers=true
 VARIANTS_MAP_FILENAME=build/resources/main/reference/12Dicts/2+2lemma_map.txt
 VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
+## $RESOURCE in the file path is replaced with the RESOURCE property value
+RESOURCE=build/resources/main/reference
+## $DATA in the file path is replaced with the DATA property value
+DATA=C:\\data
 ## specifies the IDataFormatter implementation class for a given schema
 dataFormatterClass.ticket=org.dwbzen.text.util.TicketDataFormatter
 dataFormatterClass.jsonTwitter=org.dwbzen.text.util.JsonTwitterDataFormatter
