Starting to refactor Book

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,6 +19,9 @@ WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6
 filterWordsToIgnore=true
 filterPunctuation=true
 substituteWordVariants=true
+substituteWordVariants.TECHNICAL=true
+substituteWordVariants.PROSE=false
+substituteWordVariants.VERSE=false
 ignoreNumbers=true
 VARIANTS_MAP_FILENAME=build/resources/main/reference/12Dicts/2+2lemma_map.txt
 VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
