--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,7 +15,7 @@ FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
-WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9,>,(,),_,{,},*,\\,',",/,-,#,;
+WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9,>,(,),_,{,},*,\\,',",/,-,#,;,|
 filterWordsToIgnore=true
 filterPunctuation=true
 substituteWordVariants=true
