--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -33,3 +33,7 @@ DATA=C:\\data
 dataFormatterClass.ticket=org.dwbzen.text.util.TicketDataFormatter
 dataFormatterClass.jsonTwitter=org.dwbzen.text.util.JsonTwitterDataFormatter
 dataFormatterClass.text=none
+
+## Optional seed picker classes (TODO)
+## seedPickerClass.WordProducer=org.dwbzen.text.cp.WordProducerSeedPicker
+## seedPickerClass.SentenceProducer=org.dwbzen.text.cp.SentenceProducerSeedPicker
