Continuing with Word collector refactor

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,21 +15,33 @@ FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
-WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9,>,(,),_,{,},*,\\,',",/,-,#,;,|
-filterWordsToIgnore=true
-filterPunctuation=true
-substituteWordVariants=true
+WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9
+PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,',",/,-,#,;,|
+#
+filterWordsToIgnore.TECHNICAL=true
+filterWordsToIgnore.PROSE=false
+filterWordsToIgnore.VERSE=false
+filterWordsToIgnore.OTHER=false
+#
+filterPunctuation.TECHNICAL=true
+filterPunctuation.PROSE=false
+filterPunctuation.VERSE=false
+filterPunctuation.OTHER=false
+#
 substituteWordVariants.TECHNICAL=true
 substituteWordVariants.PROSE=false
 substituteWordVariants.VERSE=false
-ignoreNumbers=true
+substituteWordVariants.OTHER=true
+#
 VARIANTS_MAP_FILENAME=build/resources/main/reference/12Dicts/2+2lemma_map.txt
 VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
+## 
 ## $RESOURCE in the file path is replaced with the RESOURCE property value
-RESOURCE=build/resources/main/reference
 ## $DATA in the file path is replaced with the DATA property value
+RESOURCE=build/resources/main/reference
 DATA=C:\\data
-## specifies the IDataFormatter implementation class for a given schema
+## 
+## specifies the IDataFormatter implementation class for a given schema name
 dataFormatterClass.ticket=org.dwbzen.text.util.TicketDataFormatter
 dataFormatterClass.jsonTwitter=org.dwbzen.text.util.JsonTwitterDataFormatter
 dataFormatterClass.text=none
