Updated output formatting & sort

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,7 +16,7 @@ LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,m,of,on,the,to,0,1,2,3,4,5,6,7,8,9
-PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,',",/,-,#,;,|
+PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
 filterWordsToIgnore.TECHNICAL=true
 filterWordsToIgnore.PROSE=false
@@ -24,7 +24,7 @@ filterWordsToIgnore.VERSE=false
 filterWordsToIgnore.OTHER=false
 #
 filterPunctuation.TECHNICAL=true
-filterPunctuation.PROSE=false
+filterPunctuation.PROSE=true
 filterPunctuation.VERSE=false
 filterPunctuation.OTHER=false
 #
