--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -18,20 +18,29 @@ USER_FILE=feedWordspos.txt
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
+filterWordsToIgnore.ANY=false
 filterWordsToIgnore.TECHNICAL=true
 filterWordsToIgnore.PROSE=false
 filterWordsToIgnore.VERSE=false
 filterWordsToIgnore.OTHER=false
 #
+filterPunctuation.ANY=false
 filterPunctuation.TECHNICAL=true
 filterPunctuation.PROSE=true
 filterPunctuation.VERSE=false
 filterPunctuation.OTHER=false
 #
+substituteWordVariants.ANY=false
 substituteWordVariants.TECHNICAL=true
 substituteWordVariants.PROSE=false
 substituteWordVariants.VERSE=false
 substituteWordVariants.OTHER=true
+#
+# These properties can also be set by content type
+ignoreWordsContainingNumbers.ANY=true
+ignoreWordsInUppercase.ANY=true
+ignoreInternetAndFileAddresses.ANY=true
+
 #
 VARIANTS_MAP_FILENAME=build/resources/main/reference/12Dicts/2+2lemma_map.txt
 VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
