--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation  'org.apache.logging.log4j:log4j-api:2.11.1'
     implementation  'org.apache.logging.log4j:log4j-core:2.11.1'
-	implementation  'math-lib:mathlib-gradle:2.0'
+	// implementation  'math-lib:mathlib-gradle:2.0'
     implementation  'com.fasterxml.jackson.core:jackson-core:2.9.5'
     implementation  'com.fasterxml.jackson.core:jackson-annotations:2.9.5'
     implementation  'com.fasterxml.jackson.core:jackson-databind:2.9.5'
