--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,7 +15,7 @@ FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
 SLANG_FILE=slangWordspos.txt
 USER_FILE=feedWordspos.txt
-WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,the,to,0,1,2,3,4,5,6,7,8,9
+WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
 filterWordsToIgnore.ANY=false
@@ -48,7 +48,7 @@ VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
 ## $RESOURCE in the file path is replaced with the RESOURCE property value
 ## $DATA in the file path is replaced with the DATA property value
 RESOURCE=build/resources/main/reference
-DATA=C:\\data
+DATA=C:/data
 ## 
 ## specifies the IDataFormatter implementation class for a given schema name
 dataFormatterClass.ticket=org.dwbzen.text.util.TicketDataFormatter
