--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,13 +8,15 @@
 # all files relative to POS_DIR
 POS_DIR=/reference/pos/
 POS_FILE=3eslpos.txt
+
+USER_DIR=C:/data/text/
 ## any of the blow params can be omitted (commented out). 
 ## If so they are simply not loaded
 ## EXTENDED_VOCAB_FILE=5deskpos.txt
 FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
-SLANG_FILE=slangWordspos.txt
-USER_FILE=feedWordspos.txt
+## SLANG_FILE=slangWordspos.txt
+USER_FILE=slangWordsposExtended.txt
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
