--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,8 +15,9 @@ USER_DIR=C:/data/text/
 ## EXTENDED_VOCAB_FILE=5deskpos.txt
 FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
+## badly named - includes new words not listed in other lists
 SLANG_FILE=slangWordspos.txt
-## USER_FILE=slangWordsposExtended.txt
+USER_FILE=slangWordsposExtended.txt
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
