--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,7 +7,7 @@
 ##
 # all files relative to POS_DIR
 POS_DIR=/reference/pos/
-POS_FILE=5deskpos.txt
+POS_FILE=3eslpos.txt
 
 USER_DIR=C:/data/text/
 ## any of the blow params can be omitted (commented out). 
@@ -15,9 +15,12 @@ USER_DIR=C:/data/text/
 ## EXTENDED_VOCAB_FILE=5deskpos.txt
 FIRSTNAMES=firstNames.txt
 LASTNAMES=lastNames.txt
-## badly named - includes new words not listed in other lists
+## badly named - includes new words and additional parts of speech
+## such as c (color), H (place name), 4 (city), 5 (country) etc.
+## not listed in any of the standard POS files
 SLANG_FILE=slangWordspos.txt
-USER_FILE=slangWordsposExtended.txt
+
+## USER_FILE=slangWordsposExtended.txt
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
