Tweaked the vocabulary some, restored 3eslpos.txt to the original, added patterns.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,7 +9,6 @@
 POS_DIR=/reference/pos/
 POS_FILE=3eslpos.txt
 
-USER_DIR=C:/data/text/
 ## any of the blow params can be omitted (commented out). 
 ## If so they are simply not loaded
 ## EXTENDED_VOCAB_FILE=5deskpos.txt
@@ -19,8 +18,9 @@ LASTNAMES=lastNames.txt
 ## such as c (color), H (place name), 4 (city), 5 (country) etc.
 ## not listed in any of the standard POS files
 SLANG_FILE=slangWordspos.txt
+USER_DIR=C:/data/text/
+## USER_FILE=yourUserFile.txt
 
-## USER_FILE=slangWordsposExtended.txt
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
 #
@@ -48,12 +48,12 @@ ignoreWordsInUppercase.ANY=true
 ignoreInternetAndFileAddresses.ANY=true
 
 #
-VARIANTS_MAP_FILENAME=build/resources/main/reference/12Dicts/2+2lemma_map.txt
-VARIANTS_FILENAME=build/resources/main/reference/12Dicts/2+2lemma.txt
+VARIANTS_MAP_FILENAME=bin/main/reference/12Dicts/2+2lemma_map.txt
+VARIANTS_FILENAME=bin/main/reference/12Dicts/2+2lemma.txt
 ## 
 ## $RESOURCE in the file path is replaced with the RESOURCE property value
 ## $DATA in the file path is replaced with the DATA property value
-RESOURCE=build/resources/main/reference
+RESOURCE=bin/resources/main/reference
 DATA=C:/data
 ## 
 ## specifies the IDataFormatter implementation class for a given schema name
