--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,7 +19,7 @@ LASTNAMES=lastNames.txt
 ## not listed in any of the standard POS files
 SLANG_FILE=slangWordspos.txt
 USER_DIR=C:/data/text/
-## USER_FILE=yourUserFile.txt
+USER_FILE=slangWordsposExtended.txt
 
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
