--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,7 +7,7 @@
 ##
 # all files relative to POS_DIR
 POS_DIR=/reference/pos/
-POS_FILE=3eslpos.txt
+POS_FILE=5deskpos.txt
 
 ## any of the blow params can be omitted (commented out). 
 ## If so they are simply not loaded
