Changed upload group, updated builds

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>textGenerator</groupId>
-  <artifactId>textGenerator</artifactId>
+  <groupId>org.dwbzen.text-processing</groupId>
+  <artifactId>text-processing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Text Gerneration Framework</name>
+  <name>Text Processing Framework</name>
   <description>text analysis and generation</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -47,6 +47,11 @@
 		<groupId>org.apache.logging.log4j</groupId>
 		<artifactId>log4j-core</artifactId>
 		<version>2.7</version>
+  </dependency>
+  <dependency>
+  		<groupId>org.dwbzen.commonlib</groupId>
+  		<artifactId>commonlib</artifactId>
+  		<version>1.0</version>
   </dependency>
   	<dependency>
 		<groupId>com.fasterxml.jackson.dataformat</groupId>
