--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'war'
 sourceCompatibility = 11
 targetCompatibility = 11
 version = '2.0'
-group = 'text-processing'
+group = 'org.dwbzen.text-processing'
 description = "Text Processing Framework"
 
 jar {
@@ -54,7 +54,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation  'org.apache.logging.log4j:log4j-api:2.11.2'
     implementation  'org.apache.logging.log4j:log4j-core:2.11.2'
-	implementation  'commonlib:commonlib:1.0'
+	implementation  'org.dwbzen.commonlib:commonlib:1.0'
     implementation  'com.fasterxml.jackson.core:jackson-core:2.9.9'
     implementation  'com.fasterxml.jackson.core:jackson-annotations:2.9.9'
     implementation  'com.fasterxml.jackson.core:jackson-databind:2.9.9'
