--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,10 @@
 		<artifactId>jackson-annotations</artifactId>
 		<version>2.9.9</version>
 	</dependency>
+	<dependency>
+		<groupId>javax.ws.rs</groupId>
+		<artifactId>javax.ws.rs-api</artifactId>
+		<version>2.1</version>
+	</dependency>
   </dependencies>
 </project>
