Adding tags and JSON format. Pass 1

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,7 +7,7 @@
 ##
 # all files relative to POS_DIR
 POS_DIR=/reference/pos/
-POS_FILE=3eslpos.txt
+POS_FILE=3eslpos.json
 
 ## any of the blow params can be omitted (commented out). 
 ## If so they are simply not loaded
@@ -17,9 +17,9 @@ LASTNAMES=lastNames.txt
 ## badly named - includes new words and additional parts of speech
 ## such as c (color), H (place name), 4 (city), 5 (country) etc.
 ## not listed in any of the standard POS files
-SLANG_FILE=slangWordspos.txt
+SLANG_FILE=slangWordspos.json
 USER_DIR=C:/data/text/
-USER_FILE=slangWordsposExtended.txt
+USER_FILE=slangWordsposExtended.json
 
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
