Tag processing and PartOfSpeechManager refactoring for JSON support (part 1)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,20 +6,21 @@
 ## Parts of Speech (POS) config
 ##
 # all files relative to POS_DIR
+# file name extensions added by IPartsOfSpeechManager instance - .txt or .json
 POS_DIR=/reference/pos/
-POS_FILE=3eslpos.json
+POS_FILE=3eslpos
 
 ## any of the blow params can be omitted (commented out). 
 ## If so they are simply not loaded
-## EXTENDED_VOCAB_FILE=5deskpos.txt
-FIRSTNAMES=firstNames.txt
-LASTNAMES=lastNames.txt
+## EXTENDED_VOCAB_FILE=5deskpos
+FIRSTNAMES=firstNames
+LASTNAMES=lastNames
 ## badly named - includes new words and additional parts of speech
 ## such as c (color), H (place name), 4 (city), 5 (country) etc.
 ## not listed in any of the standard POS files
-SLANG_FILE=slangWordspos.json
+SLANG_FILE=slangWordspos
 USER_DIR=C:/data/text/
-USER_FILE=slangWordsposExtended.json
+USER_FILE=slangWordsposExtended
 
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
