Updates for web service

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -17,12 +17,12 @@ FIRSTNAMES=firstNames
 LASTNAMES=lastNames
 ## badly named - includes new words and additional parts of speech
 ## such as c (color), H (place name) etc. not listed in any of the standard POS files
-SLANG_FILE=slangWordspos
+SLANG_FILE=slangWordsPosExtended
 ##
 ## User custom POS file - change to match your environment or comment out
 ##
-USER_DIR=C:/data/text/
-USER_FILE=extendedPosWords
+## USER_DIR=C:/data/text/
+## USER_FILE=extendedPosWords
 
 WORDS_TO_IGNORE=a,an,and,as,be,but,for,has,if,in,is,it,of,on,not,the,to,0,1,2,3,4,5,6,7,8,9
 PUNCTUATION=.,?,!,:,&,+,>,>>,(,),_,{,},*,\\,",/,-,#,;,|
