--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'war'
 
-sourceCompatibility = 12
-targetCompatibility = 12
+sourceCompatibility = 14
+targetCompatibility = 14
 version = '2.0'
 group = 'org.dwbzen.text-processing'
 description = "Text Processing Framework"
@@ -64,4 +64,5 @@ dependencies {
     implementation  'com.fasterxml.jackson.core:jackson-databind:2.10.2'
     implementation  'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.2'
     implementation  'javax.ws.rs:javax.ws.rs-api:2.1'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.25.1'
 }
