--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,18 @@
  */
  plugins {
   id "java"
-  id "ivy-publish"
+  id "maven-publish"
 }
 
+// Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
 apply plugin: 'java-library-distribution'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-apply plugin: 'war'
 
 sourceCompatibility = 15
 targetCompatibility = 15
-version = '2.0'
+version = '2.1'
 group = 'org.dwbzen.text-processing'
 description = "Text Processing Framework"
 
@@ -32,7 +32,6 @@ jar {
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-	jcenter()
 	mavenLocal()
     mavenCentral()
 	flatDir {
@@ -45,13 +44,19 @@ repositories {
     }
 }
 
-uploadArchives {
-		repositories {
-		add project.repositories.jarRepository
-		add project.repositories.commonlibLib
-		mavenLocal()
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			artifactId="text-processing"
+			from components.java
 		}
+	}
+	repositories {
+		add project.repositories.jarRepository
+		mavenLocal()
+	}
 }
+
 
 dependencies {
     // Use JUnit test framework
@@ -64,5 +69,4 @@ dependencies {
     implementation  'com.fasterxml.jackson.core:jackson-databind:2.12.0'
     implementation  'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.0'
     implementation  'javax.ws.rs:javax.ws.rs-api:2.1'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.25.1'
 }
