Summary Updated build file. Actions:
Problems

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ repositories {
     }
 	flatDir {
         name "commonlibLib"
-        dirs "../commonlib/lib"
+        dirs "../commonlib/build/libs"
     }
 }
 
